--- a/eda_v2.ipynb
+++ b/eda_v2.ipynb
@@ -334,6 +334,141 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Interactive map saved as 'plots/interactive_route_map_folium_by_routeid.html'. Open it in a browser!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import folium\n",
+    "from shapely.geometry import LineString, Point\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Load GTFS data\n",
+    "gtfs_path = \"C:/Users/KIIT/Downloads/belgium-rail-gtfs/data\"  # Path to your data folder\n",
+    "stops = pd.read_csv(f\"{gtfs_path}/stops.txt\")\n",
+    "trips = pd.read_csv(f\"{gtfs_path}/trips.txt\")\n",
+    "stop_times = pd.read_csv(f\"{gtfs_path}/stop_times.txt\")\n",
+    "routes = pd.read_csv(f\"{gtfs_path}/routes.txt\")\n",
+    "\n",
+    "# Clean stops data: Remove rows with NaN or extreme values in lat/lon\n",
+    "stops_clean = stops.dropna(subset=['stop_lat', 'stop_lon'])\n",
+    "stops_clean = stops_clean[(stops_clean['stop_lat'].between(49.5, 51.5)) & (stops_clean['stop_lon'].between(2.5, 6.5))]\n",
+    "\n",
+    "# Function to create route lines\n",
+    "def create_route_lines(route_id):\n",
+    "    # Get trips for this route\n",
+    "    route_trips = trips[trips['route_id'] == route_id]\n",
+    "    if route_trips.empty:\n",
+    "        return None\n",
+    "    \n",
+    "    # Take the first trip (simplification—could aggregate all trips)\n",
+    "    trip_id = route_trips['trip_id'].iloc[0]\n",
+    "    trip_stops = stop_times[stop_times['trip_id'] == trip_id].sort_values('stop_sequence')\n",
+    "    \n",
+    "    # Get stop coordinates in order\n",
+    "    stop_coords = []\n",
+    "    for stop_id in trip_stops['stop_id']:\n",
+    "        stop = stops_clean[stops_clean['stop_id'] == stop_id]\n",
+    "        if not stop.empty:\n",
+    "            stop_coords.append((stop['stop_lat'].iloc[0], stop['stop_lon'].iloc[0]))\n",
+    "    \n",
+    "    if len(stop_coords) < 2:  # Need at least 2 points for a line\n",
+    "        return None\n",
+    "    \n",
+    "    return LineString(stop_coords)\n",
+    "\n",
+    "# Create route data\n",
+    "route_lines = []\n",
+    "route_ids = []\n",
+    "for route_id in routes['route_id'].unique():\n",
+    "    line = create_route_lines(route_id)\n",
+    "    if line is not None:\n",
+    "        route_lines.append(line)\n",
+    "        route_ids.append(route_id)\n",
+    "\n",
+    "gdf_routes = gpd.GeoDataFrame({\n",
+    "    'route_id': route_ids,\n",
+    "    'geometry': route_lines\n",
+    "}, crs=\"EPSG:4326\")\n",
+    "\n",
+    "# Get the top 10 routes by trip count\n",
+    "top_routes = trips['route_id'].value_counts().head(10).index\n",
+    "gdf_routes_top = gdf_routes[gdf_routes['route_id'].isin(top_routes)]\n",
+    "\n",
+    "# Generate a color palette for the top 10 routes\n",
+    "n_routes = len(top_routes)\n",
+    "colors = sns.color_palette('husl', n_colors=n_routes)  # Use 'husl' for distinct, vibrant colors\n",
+    "\n",
+    "# Define rgb2hex function\n",
+    "def rgb2hex(rgb):\n",
+    "    return '#%02x%02x%02x' % tuple(int(c * 255) for c in rgb)\n",
+    "\n",
+    "# Create a color map for route_ids (only for top 10 routes) with route names for legend\n",
+    "route_names = {rid: routes[routes['route_id'] == rid]['route_short_name'].iloc[0] if not routes[routes['route_id'] == rid].empty else rid \n",
+    "               for rid in top_routes}\n",
+    "color_map = {route_id: f'#{rgb2hex(color)[1:]}' for route_id, color in zip(top_routes, colors)}  # Convert RGB to hex for folium\n",
+    "\n",
+    "# Create an interactive map centered on Belgium\n",
+    "m = folium.Map(location=[50.5, 4.5], zoom_start=8, tiles='OpenStreetMap', attr='OpenStreetMap')\n",
+    "\n",
+    "# Add dimmed basemap (adjust opacity via custom tiles or overlay)\n",
+    "folium.TileLayer(\n",
+    "    tiles='https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',\n",
+    "    attr='OpenStreetMap',\n",
+    "    opacity=0.3  # Dim the basemap\n",
+    ").add_to(m)\n",
+    "\n",
+    "# Add routes as polylines with colors\n",
+    "for _, row in gdf_routes_top.iterrows():\n",
+    "    route_color = color_map.get(row['route_id'], '#808080')  # Default to gray if not in top 10\n",
+    "    folium.PolyLine(\n",
+    "        locations=list(row.geometry.coords),\n",
+    "        color=route_color,\n",
+    "        weight=2,\n",
+    "        opacity=0.7,\n",
+    "        popup=f\"Route {route_names.get(row['route_id'], row['route_id'])} (ID: {row['route_id']})\"\n",
+    "    ).add_to(m)\n",
+    "\n",
+    "# Add stops as markers\n",
+    "for _, stop in stops_clean.iterrows():\n",
+    "    folium.CircleMarker(\n",
+    "        location=[stop['stop_lat'], stop['stop_lon']],\n",
+    "        radius=3,\n",
+    "        color='grey',\n",
+    "        fill=True,\n",
+    "        fill_color='grey',\n",
+    "        fill_opacity=0.5,\n",
+    "        popup=stop['stop_name']\n",
+    "    ).add_to(m)\n",
+    "\n",
+    "# Create a legend for routes\n",
+    "legend_html = \"\"\"\n",
+    "<div style=\"position: fixed; bottom: 50px; left: 50px; z-index: 1000; background-color: white; padding: 10px; border: 2px solid grey; border-radius: 5px;\">\n",
+    "    <h4>Route Legend</h4>\n",
+    "    {}\n",
+    "</div>\n",
+    "\"\"\".format(''.join([\n",
+    "    f'<p style=\"margin: 0; line-height: 1.5;\"><span style=\"display: inline-block; width: 20px; height: 10px; background-color: {color_map[rid]};\"></span> Route {route_names[rid]} (ID: {rid})</p>'\n",
+    "    for rid in top_routes\n",
+    "]))\n",
+    "\n",
+    "m.get_root().html.add_child(folium.Element(legend_html))\n",
+    "\n",
+    "# Save the map\n",
+    "m.save('plots/interactive_route_map_folium_by_routeid.html')\n",
+    "print(\"Interactive map saved as 'plots/interactive_route_map_folium_by_routeid.html'.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
